--- a/architect/package.json
+++ b/architect/package.json
@@ -10,10 +10,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.2",
+    "loaders.css": "^0.1.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
+    "react-loaders": "^3.0.1",
     "react-lottie": "^1.2.4",
+    "react-markdown": "^9.0.1",
     "react-router-dom": "^6.24.0"
   },
   "devDependencies": {
