--- a/package.json
+++ b/package.json
@@ -12,11 +12,10 @@
   "dependencies": {
     "jspdf": "^2.5.1",
     "jspdf-autotable": "^3.8.2",
-    "loaders.css": "^0.1.2",
+    "markdown-to-jsx": "^7.4.7",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
-    "react-loaders": "^3.0.1",
     "react-lottie": "^1.2.4",
     "react-markdown": "^9.0.1",
     "react-router-dom": "^6.24.0"
